Fix hero alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -252,7 +252,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url('../img/hero-min.jpg') center center;
+  background: url('../img/hero-min.jpg') bottom right;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -821,21 +821,26 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key,  {
         font-size: 14px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         margin-left: 20px;
       }
-      input {
-        padding-left: 68px;
-        width: 100%;
+      input,
+      select {
+        font-size: 14px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        margin-left: 40px;
+        padding: 0 30px;
+        width: calc(100% - 70px);
         height: 100%;
-        -moz-border-radius: 6px;
-        -webkit-border-radius: 6px;
         border-radius: 6px;
         border: none;
+        box-sizing: border-box;
       }
       input::-webkit-input-placeholder {
         color: $form-placeholder;
